--- a/department-service.properties
+++ b/department-service.properties
@@ -8,4 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.application.name=DEPARTMENT-SERVICE
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-spring.boot.message=hello, world from spring
+spring.boot.message=hello, world from springss
